objects/SurveyTaker__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <formula>IF(Visit__r.Engineer2__c&lt;&gt;NULL,Visit__r.Engineer2__r.Name, Visit__r.X2nd_Technician__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineer</label>
    <type>Text</type>
</CustomField>