objects/SurveyTaker__c/fields/No_of_Question__c.field-meta.xml
<CustomField>
    <fullName>No_of_Question__c</fullName>
    <label>No of Question</label>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>