objects/SurveyTaker__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>