objects/SurveyTaker__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>